--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 repositories {
-    maven { url "http://artifactory.jibo.com/artifactory/Android_maven" }
+    maven { url "https://oss.sonatype.org/content/repositories/releases/" }
     mavenCentral()
     mavenLocal()
     flatDir{
@@ -39,6 +39,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.jakewharton:butterknife:8.8.1'
+
+    compile 'com.jibo.apptoolkit:apptoolkit-java-protocol:0.2.4'
+    compile 'com.jibo.apptoolkit.android:apptoolkit-android-library:0.0.0.1'
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
